--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "preview": "bunx vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@vitejs/plugin-react": "^5.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "6.26.1"
+    "react-router-dom": "6.26.1",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
