--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
+    "@mui/x-date-pickers": "^8.11.1",
+    "@mui/x-date-pickers-pro": "^8.11.1",
     "@vitejs/plugin-react": "^5.0.1",
+    "dayjs": "^1.11.18",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.1",
