--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mui/x-date-pickers-pro": "^8.11.1",
     "@vitejs/plugin-react": "^5.0.1",
     "dayjs": "^1.11.18",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.1",
